<resources>
    <string name="app_name">Healthy Life</string>
    <string name="email">Correo eletrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="crear_cuenta">Crear una cuenta</string>
    <string name="facebook">Iniciar sesión con Facebook</string>
    <string name="google">Iniciar sesión con Google</string>
    <string name="get_into">Crear cuenta</string>
    <string name="forget">¿Ha olvidado su contraseña?</string>
    <string name="donthave">¿No tienes una cuenta?</string>
    <string name="alreadyhave">¿Ya tienes una cuenta?</string>
    <string name="send">Enviar</string>
    <string name="next">Siguiente</string>
    <string name="contextresetpassword">Para restablecer la contraseña, introduce la dirección de correo electrónico que utilizas para iniciar sesión.</string>
    <string name="contextnewpassword">Indique una contraseña nueva para esta cuenta.</string>
    <string name="resetpassword">Restablecer contraseña</string>
    <string name="textmessage">Hemos enviado un SMS a tu móvil</string>
    <string name="newpassword">Nueva contraseña</string>
    <string name="contextmessage">Para completar la verificación de tu correo electrónico, por favor, ingrese el código de activación de 4 dígitos.</string>
    <string name="phone">Celular</string>
    <string name="register">Registrar</string>
    <string name="generar_cita">Generar Cita</string>
    <string name="ver_recetas">Ver Recetas</string>
    <string name="historial_citas">Historial de citas</string>
    <string name="cuenta">Cuenta</string>
    <string name="leave">Cerrar sesión</string>
    <string name="search">Buscar...</string>
    <string name="comunicaciones">Comunicaciones</string>
    <string name="contactanos">Contactanos</string>
    <string name="libroreclamaciones">Libro Reclamaciones</string>
    <string name="repeatpassword">Confirmar Contraseña</string>
    <string name="terms">Acepto los términos y condiciones</string>
    <string name="RegistroUsuario">Registrarse</string>
    <string name="dating">Historial de Citas</string>
    <string name="date">CITA - 5/5/23</string>
    <string name="receta">RECETA - 5/5/23</string>
    <string name="doctor">Doctor: </string>
    <string name="especialidad">Especialidad: </string>
    <string name="account">Mi Cuenta</string>
    <string name="name">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="address">Dirección</string>
    <string name="edu">Correo</string>
    <string name="save">Guardar</string>
    <string name="generate">Generar</string>
    <string name="makedate">Reservar cita</string>
    <string name="prescriptions">Recetas Médicas</string>
    <string name="schedule">Cronograma</string>
    <string name="selectime">Seleccionar hora</string>
    <string name="showplus">Ver más</string>
    <string name="todo">TODO</string>
    <string name="makeappointment">Reservar una cita</string>
    <string-array name="carreras">
        <item>Administración de Datos</item>
        <item>Big Data y Ciencia de Datos</item>
        <item>Diseño y Desarrollo de Software</item>
        <item>Producción y Gestión Industrial</item>
        <item>Tecnología de la Producción</item>
        <item>Gestión y Mantenimiento de Maquinaria Pesada</item>
    </string-array>
    <string-array name="cargos">
        <item>Estudiante</item>
        <item>Docente</item>
        <item>Administrador</item>
        <item>Director</item>
        <item>Coordinador</item>
        <item>Asistente</item>
    </string-array>
    <string-array name="especialidad">
        <item>Alergología</item>
        <item>Anestesiología</item>
        <item>Angiología</item>
        <item>Cardiología</item>
        <item>Endocrinología</item>
        <item>Estomatología</item>
        <item>Farmacología Clínica</item>
        <item>Pediatría</item>
        <item>Psiquiatría</item>
        <item>Nutriología</item>
        <item>Oncología médica</item>
        <item>Medicina forense</item>
    </string-array>
    <string-array name="doctor">
        <item>Carlos Mendoza</item>
        <item>Rommel Hurtado</item>
        <item>Yeromi Zavala</item>
        <item>David Ruiz</item>
    </string-array>
    <string-array name="fecha">
        <item>03/06/2023</item>
        <item>02/06/2023</item>
        <item>01/06/2023</item>
        <item>31/05/2023</item>
    </string-array>
    <string-array name="horario">
        <item>Tarde</item>
        <item>Mañana</item>
    </string-array>
    <string name="title_activity_registro">Registro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="programarcita">Recordatorio</string>
</resources>