<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/date"
            android:icon="@drawable/date_clock"
            android:title="Reservar cita" />

        <item
            android:id="@+id/recetas"
            android:icon="@drawable/book_multiple"
            android:title="Ver recetas" />

        <item
            android:id="@+id/record"
            android:icon="@drawable/historial"
            android:title="@string/historial_citas" />
        <item
            android:id="@+id/account"
            android:icon="@drawable/cuenta"
            android:title="@string/cuenta" />
    </group>

    <item
        android:checkable="false"
        android:title="@string/comunicaciones">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/contact_us"
                    android:icon="@drawable/contactos"
                    android:title="@string/contactanos" />
                <item
                    android:id="@+id/complaints_book"
                    android:icon="@drawable/reclamaciones"
                    android:title="@string/libroreclamaciones" />
            </group>
        </menu>
    </item>
    <item
        android:enabled="false"
        android:orderInCategory="100"
        android:title="">
        <menu>

            <item
                android:id="@+id/leave"
                android:icon="@drawable/logout"
                android:title="@string/leave" />
        </menu>
    </item>

</menu>