<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgactivity"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|top"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/newpassword"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contextnewpassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"

            />


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="18dp" />

        <EditText
            android:id="@+id/passwordrepeatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/repeatpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="18dp" />

        <Button
            android:id="@+id/btnNextLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_button_background"
            android:elevation="4dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>