<?xml version="1.0" encoding="utf-8"?><!-- item_user.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/card_background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="top"
                android:src="@drawable/message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fechaCitaMedica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/receta"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/especialidad" />

                    <TextView
                        android:id="@+id/especialidadCitaMedica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Cardiología"
                        android:textColor="#373737" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/doctor" />

                    <TextView
                        android:id="@+id/doctorCitaMedica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Carlos Mendoza"
                        android:textColor="#373737" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnShowPlus"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/showplus"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>

